--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <p>"What you wear is how you present yourself 
                         to the world, especially today,<br> when human 
                         contacts are so quick. Fashion is instant language."</p>
-                        <a href="" class="btn">Explore Now &#10141;</a>
+                        <a href="product.html" class="btn">Explore Now &#10141;</a>
                 </div>
                 <div class="col-2">
                     <img src="images/hip-hop2.png" alt="">
