--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                         <i class="fa fa-star-half-o" aria-hidden="true"></i>
                     </div>
                     <img src="images/owner.jpeg" alt="">
-                    <h4>Pradhumn Kumar</h4>
+                    <h4>Sanjay Bhagat</h4>
                 </div>
 
                 <div class="col-3">
@@ -87,8 +87,8 @@
                         <i class="fa fa-star" aria-hidden="true"></i>
                         <i class="fa fa-star-half-o" aria-hidden="true"></i>
                     </div>
-                    <img src="images/pradhumn.jpg" alt="">
-                    <h4>Pradhumn Kumar</h4>
+                    <img src="images/manager.jpeg" alt="">
+                    <h4>Pranav Kumar</h4>
                 </div>
             </div>
         </div>
